<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Welcome"
                android:gravity="center"
                android:id="@+id/login_welcome"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/txtEmail"
                android:text="@string/enter_email"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:padding="5dp"
                android:textSize="@dimen/extra_small_size"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:imeOptions="actionNext"
                android:drawableLeft="@drawable/ic_mail"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:textAlignment="viewStart"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/txtPass"
                android:layout_marginRight="15dp"
                android:text="@string/enter_password"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/extra_small_size"
                android:layout_marginRight="15dp"
                android:imeOptions="actionNext"
                android:drawableLeft="@drawable/ic_password_icon"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="10dp"
                android:textAlignment="viewStart"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    style="@style/GreenButtonTheme"
                    android:id="@+id/bt_login"
                    android:layout_marginRight="3dp"
                    />
                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    style="@style/BlueButtonTheme"
                    android:layout_marginLeft="3dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>